--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+nav {
+  width: 100%;
+}
+
 .btn {
   display: block;
   width: fit-content;
-  margin: auto;
   margin-top: 1rem;
   padding: 0.5rem 1.3rem;
   font-size: 1rem;
@@ -16,6 +19,10 @@
 .btn:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+.sign-in {
+  margin-left: auto;
 }
 
 .modal {
