--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+  width: 100%;
+}
+
 .btn {
   display: block;
   width: fit-content;
-  margin: auto;
-  margin-top: 1rem;
   padding: 0.5rem 1.3rem;
   font-size: 1rem;
   text-transform: capitalize;
@@ -16,6 +22,10 @@
 .btn:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+.sign-in {
+  margin-left: auto;
 }
 
 .modal {
@@ -79,4 +89,42 @@
   border: 1px solid rgba(0, 0, 0, 0.4);
   border-radius: 0.5rem;
   outline-color: #0066ff;
+}
+
+.modal__buttons-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.modal__register {
+  background-color: transparent;
+  border: none;
+  color: #0066ff;
+}
+
+.modal__register:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.notifications {
+  position: absolute;
+  top: 0;
+  right: 1rem;
+  display: flex;
+  flex-direction: column;
+  min-width: 10rem;
+  align-items: center;
+  z-index: 4;
+}
+
+.notification {
+  width: fit-content;
+  padding: 1rem;
+  margin-top: 2rem;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(53, 52, 52);
 }
