--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6  {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: space-between;
+  align-items: flex-end;
 }
 
 
