--- a/style.css
+++ b/style.css
@@ -25,6 +25,47 @@ h1, h2, h3, h4, h5, h6  {
   align-items: flex-end;
 }
 
+/* Search button*/
+.wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  min-width: 100px;
+  height: 65px;
+}
+
+.search {
+  margin: 0 5px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  width: 50%;
+  padding: 2px 20px 2px 50px;
+  outline: 0;
+  background-color: #f5f5f5;
+}
+
+.search-icon {
+  width: 40px;
+  position: relative;
+  top: 2px;
+  left: 48px;
+  padding: 7px;
+} 
+
+.clear-icon {
+  position: absolute;
+  top: 9px;
+  right: 8px;
+  width: 12px;
+  cursor: pointer;
+  visibility: hidden;
+}
+
+.search:hover, .search:focus {
+  border: 1px solid #009688;
+  background-color: white;
+}
+/* -- Search button -- */
 
 .recipes {
   padding-left: auto;
@@ -295,16 +336,14 @@ margin:20px 0
 }
 
 .w3-image {
-max-width:100%;
-height:auto 
+  overflow: hidden;
+  max-width: 100vw;
+  height: auto;
 }
 img {
 vertical-align:middle;
-
 border-style:none;
-
 min-height: 30%;
-
 width: auto;
 
 }
@@ -775,9 +814,6 @@ display:inline-block!important
 }
 
 @media (max-width:1205px) {
-.w3-auto {
-max-width:95% 
-}
  
 }
 
@@ -812,6 +848,10 @@ width:100%
 }
 
 @media (max-width:768px) {
+  .w3-image {
+    display: none;
+  }
+
 .w3-modal-content {
 width:500px 
 }
@@ -842,6 +882,10 @@ display:none!important
 }
 
 @media (max-width:992px) {
+  .search {
+    width: 100%;
+  }
+
 .w3-sidebar.w3-collapse {
 display:none 
 }
