--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Times New Roman", Georgia, Serif;
+  font-family: "Playfair Display";
   max-width: 100%;
 }
 
@@ -9,15 +9,37 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display";
-  margin: 5px 0 16px 0;
+
+  font-family: 'Montserrat', sans-serif;
+  margin: 5px 0;
   letter-spacing: 2px;
+}
+
+li,
+ul,
+ol {
+  font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul, li {
+  margin: 0 0 5px 0;
+}
+ul {
+  border-bottom: 2px solid rgb(224, 255, 206);
+}
+ol {
+  font-size: 1.15em;
 }
 
 .grid-container {
   display: grid;
+  justify-content: space-evenly;
+  justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding: 10px;
+  gap: 25px;
 }
 
 .flex {
@@ -26,6 +48,7 @@ h6 {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-end;
+  align-content: flex-start
 }
 
 /* Search button*/
@@ -50,8 +73,8 @@ h6 {
 .search-icon {
   width: 40px;
   position: relative;
-  top: 2px;
-  left: 48px;
+  top: 18px;
+  left: 50px;
   padding: 7px;
 }
 
@@ -78,6 +101,9 @@ h6 {
 
 .card {
   width: 320px;
+  margin: 5px;
+  border: 2px solid #e9e9e9;
+  padding: 5px;
 }
 
 .card__image {
@@ -93,12 +119,21 @@ h4 {
   white-space: normal;
 }
 
+.card__ingredients, .card__instructions {
+  font-family: 'Montserrat', sans-serif;
+  max-height: 110px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 .card__name {
-  min-width: 100%;
+  min-width: 110%;
   height: 70px;
   padding: 12px;
+  color: white;
   font-size: 1em;
-  background-color: lightgray;
+  background-color: #8d9d80;
 }
 
 .icb-hrt {
@@ -361,16 +396,6 @@ h6 {
   font-family: monospace;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Segoe UI", Arial, sans-serif;
-  font-weight: 400;
-  margin: 10px 0;
-}
 .w3-wide {
   letter-spacing: 4px;
 }
@@ -870,9 +895,6 @@ a {
 .w3-auto {
   margin-left: auto;
   margin-right: auto;
-}
-.w3-content {
-  max-width: 980px;
 }
 .w3-auto {
   max-width: 1140px;
@@ -1649,7 +1671,7 @@ a {
 .w3-light-gray,
 .w3-hover-light-gray:hover {
   color: #000 !important;
-  background-color: #f1f1f1 !important;
+  background-color: #d8e0e2;
 }
 
 .w3-dark-grey,
