--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ h4 {
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
