--- a/style.css
+++ b/style.css
@@ -108,7 +108,6 @@ ol {
   font-weight: 400;
   line-height: 1.15385;
   margin: 0;
-  outline: none;
   padding: 8px 0.8em;
   position: relative;
   text-align: center;
@@ -2184,6 +2183,7 @@ a {
   color: white;
   border: none;
   border-radius: 5px;
+  outline-color: rgba(24, 115, 180, 0.979);
   opacity: 0.9;
 }
 
