--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ h4 {
 .card__instructions {
   font-family: "Montserrat", sans-serif;
   overflow: hidden;
+  max-height: 240px;
   text-overflow: ellipsis;
 }
 
@@ -177,7 +178,7 @@ h4 {
 }
 .card__content {
   display: flex;
-  min-height: 280px;
+  height: 280px;
   flex-wrap: wrap;
   justify-content: center;
   align-content: space-between;
