--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   max-width: 100%;
 }
 
+a:focus,
+button:focus {
+  outline-width: 2px;
+}
+
 h1,
 h2,
 h3,
@@ -64,7 +69,6 @@ ol {
   border-radius: 5px;
   width: 50%;
   padding: 2px 20px 2px 50px;
-  outline: 0;
   background-color: #f5f5f5;
 }
 
@@ -107,7 +111,6 @@ ol {
   font-weight: 400;
   line-height: 1.15385;
   margin: 0;
-  outline: none;
   padding: 8px 0.8em;
   position: relative;
   text-align: center;
@@ -225,6 +228,7 @@ h4 {
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -279,10 +283,6 @@ template {
 
 a {
   background-color: transparent;
-}
-a:active,
-a:hover {
-  outline-width: 0;
 }
 
 abbr[title] {
@@ -744,7 +744,6 @@ a {
   background-color: #fff;
   position: relative;
   padding: 0;
-  outline: 0;
   width: 600px;
 }
 
@@ -763,7 +762,6 @@ a {
   width: auto;
   border: none;
   display: block;
-  outline: 0;
 }
 
 .w3-bar .w3-dropdown-hover,
@@ -784,7 +782,6 @@ a {
   border: none;
   white-space: normal;
   float: none;
-  outline: 0;
 }
 
 .w3-bar-block.w3-center .w3-bar-item {
@@ -2077,7 +2074,7 @@ a {
   margin-left: auto;
 }
 
-.side-bar {
+.sidebar {
   position: fixed;
   top: 0;
   right: -100rem; /* Hide from screen */
@@ -2092,37 +2089,41 @@ a {
   z-index: 3;
 }
 
-.side-bar--active {
+.sidebar--active {
   right: 0;
 }
 
-.side-bar__card {
+.sidebar__card {
   display: flex;
   align-items: center;
   margin-top: 1rem;
   padding: 1rem;
 }
 
-.side-bar__card:hover {
+.sidebar__card:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.05);
 }
-
-.side-bar__card:hover > .side-bar__delete {
+.sidebar__card:hover > .sidebar__delete,
+.sidebar__card:focus > .sidebar__delete,
+.sidebar__delete:focus {
   opacity: 1;
   cursor: pointer;
 }
 
-.side-bar__image {
+.sidebar__image {
   height: 50px;
 }
 
-.side-bar__name {
+.sidebar__name {
   margin-left: 1rem;
   user-select: none;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0;
 }
 
-.side-bar__delete {
+.sidebar__delete {
   background-color: transparent;
   border: none;
   margin-left: 1rem;
@@ -2130,50 +2131,56 @@ a {
   opacity: 0;
 }
 
-.side-bar__delete:hover {
+.sidebar__delete:hover {
   transform: scale(1.1);
 }
 
-.side-bar__default-content--hidden {
+.sidebar__default-content--hidden {
   display: none;
 }
 
-.side-bar__header {
+.sidebar__header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
 }
 
-.side-bar__title {
+.sidebar__title {
   margin: 0;
   text-align: center;
   color: #4f4f4f;
   font-size: 1.5rem;
 }
 
-.side-bar__close {
+.sidebar__close {
   transition: all 0.2s linear;
   margin-left: 1rem;
 }
 
-.side-bar__close:hover {
+.sidebar__close:hover {
   transform: scale(1.2) rotate(90deg);
   cursor: pointer;
 }
 
-.side-bar__form {
+.sidebar__form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin-top: 1rem;
 }
 
-.side-bar__label {
+.sidebar__errors {
+  color: red;
+  font-size: 0.8rem;
+  font-style: italic;
+}
+
+.sidebar__label {
   margin-top: 1rem;
 }
 
-.side-bar__input {
+.sidebar__input {
   height: 2rem;
   padding-left: 1rem;
   margin-top: 0.5rem;
@@ -2181,14 +2188,14 @@ a {
   outline-color: #0066ff;
 }
 
-.side-bar__buttons-wrapper {
+.sidebar__buttons-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 1rem;
 }
 
-.side-bar__sign-in {
+.sidebar__sign-in {
   display: block;
   width: fit-content;
   padding: 0.5rem 1.3rem;
@@ -2198,22 +2205,23 @@ a {
   color: white;
   border: none;
   border-radius: 5px;
+  outline-color: rgba(24, 115, 180, 0.979);
   opacity: 0.9;
 }
 
-.side-bar__sign-in:hover {
+.sidebar__sign-in:hover {
   cursor: pointer;
   opacity: 1;
 }
 
-.side-bar__register {
+.sidebar__register {
   background-color: transparent;
   border: none;
   text-decoration: underline;
   transition: all 0.1s linear;
 }
 
-.side-bar__register:hover {
+.sidebar__register:hover {
   cursor: pointer;
 }
 
