--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@ body {
   max-width: 100%;
 }
 
-a:focus,
-button:focus {
-  outline-width: 2px;
-}
-
 h1,
 h2,
 h3,
@@ -69,6 +64,7 @@ ol {
   border-radius: 5px;
   width: 50%;
   padding: 2px 20px 2px 50px;
+  outline: 0;
   background-color: #f5f5f5;
 }
 
@@ -111,6 +107,7 @@ ol {
   font-weight: 400;
   line-height: 1.15385;
   margin: 0;
+  outline: none;
   padding: 8px 0.8em;
   position: relative;
   text-align: center;
@@ -228,7 +225,6 @@ h4 {
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 html {
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -283,6 +279,10 @@ template {
 
 a {
   background-color: transparent;
+}
+a:active,
+a:hover {
+  outline-width: 0;
 }
 
 abbr[title] {
@@ -744,6 +744,7 @@ a {
   background-color: #fff;
   position: relative;
   padding: 0;
+  outline: 0;
   width: 600px;
 }
 
@@ -762,6 +763,7 @@ a {
   width: auto;
   border: none;
   display: block;
+  outline: 0;
 }
 
 .w3-bar .w3-dropdown-hover,
@@ -782,6 +784,7 @@ a {
   border: none;
   white-space: normal;
   float: none;
+  outline: 0;
 }
 
 .w3-bar-block.w3-center .w3-bar-item {
@@ -2074,7 +2077,7 @@ a {
   margin-left: auto;
 }
 
-.sidebar {
+.side-bar {
   position: fixed;
   top: 0;
   right: -100rem; /* Hide from screen */
@@ -2089,41 +2092,37 @@ a {
   z-index: 3;
 }
 
-.sidebar--active {
+.side-bar--active {
   right: 0;
 }
 
-.sidebar__card {
+.side-bar__card {
   display: flex;
   align-items: center;
   margin-top: 1rem;
   padding: 1rem;
 }
 
-.sidebar__card:hover {
+.side-bar__card:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.05);
 }
-.sidebar__card:hover > .sidebar__delete,
-.sidebar__card:focus > .sidebar__delete,
-.sidebar__delete:focus {
+
+.side-bar__card:hover > .side-bar__delete {
   opacity: 1;
   cursor: pointer;
 }
 
-.sidebar__image {
+.side-bar__image {
   height: 50px;
 }
 
-.sidebar__name {
+.side-bar__name {
   margin-left: 1rem;
   user-select: none;
-  font-size: 1rem;
-  font-weight: 500;
-  letter-spacing: 0;
 }
 
-.sidebar__delete {
+.side-bar__delete {
   background-color: transparent;
   border: none;
   margin-left: 1rem;
@@ -2131,56 +2130,50 @@ a {
   opacity: 0;
 }
 
-.sidebar__delete:hover {
+.side-bar__delete:hover {
   transform: scale(1.1);
 }
 
-.sidebar__default-content--hidden {
+.side-bar__default-content--hidden {
   display: none;
 }
 
-.sidebar__header {
+.side-bar__header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
 }
 
-.sidebar__title {
+.side-bar__title {
   margin: 0;
   text-align: center;
   color: #4f4f4f;
   font-size: 1.5rem;
 }
 
-.sidebar__close {
+.side-bar__close {
   transition: all 0.2s linear;
   margin-left: 1rem;
 }
 
-.sidebar__close:hover {
+.side-bar__close:hover {
   transform: scale(1.2) rotate(90deg);
   cursor: pointer;
 }
 
-.sidebar__form {
+.side-bar__form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin-top: 1rem;
 }
 
-.sidebar__errors {
-  color: red;
-  font-size: 0.8rem;
-  font-style: italic;
-}
-
-.sidebar__label {
+.side-bar__label {
   margin-top: 1rem;
 }
 
-.sidebar__input {
+.side-bar__input {
   height: 2rem;
   padding-left: 1rem;
   margin-top: 0.5rem;
@@ -2188,14 +2181,14 @@ a {
   outline-color: #0066ff;
 }
 
-.sidebar__buttons-wrapper {
+.side-bar__buttons-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 1rem;
 }
 
-.sidebar__sign-in {
+.side-bar__sign-in {
   display: block;
   width: fit-content;
   padding: 0.5rem 1.3rem;
@@ -2205,23 +2198,22 @@ a {
   color: white;
   border: none;
   border-radius: 5px;
-  outline-color: rgba(24, 115, 180, 0.979);
   opacity: 0.9;
 }
 
-.sidebar__sign-in:hover {
+.side-bar__sign-in:hover {
   cursor: pointer;
   opacity: 1;
 }
 
-.sidebar__register {
+.side-bar__register {
   background-color: transparent;
   border: none;
   text-decoration: underline;
   transition: all 0.1s linear;
 }
 
-.sidebar__register:hover {
+.side-bar__register:hover {
   cursor: pointer;
 }
 
