--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ h4 {
   font-size: 20px;
 }
 
-.w3-wide {
+.lz-wide {
   letter-spacing: 4px;
 }
 
@@ -327,7 +327,7 @@ hr {
   margin: 20px 0;
 }
 
-.w3-image {
+.lz-image {
   overflow: hidden;
   max-width: 100vw;
   height: auto;
@@ -344,7 +344,7 @@ a {
 }
 
 
-.w3-button {
+.lz-button {
   border: none;
   display: inline-block;
   padding: 8px 16px;
@@ -359,7 +359,7 @@ a {
 }
 
 
-.w3-button {
+.lz-button {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -369,7 +369,7 @@ a {
 }
 
 
-.w3-button:disabled {
+.lz-button:disabled {
   cursor: not-allowed;
   opacity: 0.3;
 }
@@ -379,7 +379,7 @@ a {
 }
 
 
-.w3-display-container {
+.lz-display-container {
   position: relative;
 }
 
@@ -388,16 +388,16 @@ a {
   transition: margin-left 0.4s;
 }
 
-.w3-bar {
+.lz-bar {
   width: 100%;
   overflow: hidden;
 }
-.w3-center .w3-bar {
+.lz-center .lz-bar {
   display: inline-block;
   width: auto;
 }
 
-.w3-bar .w3-bar-item {
+.lz-bar .lz-bar-item {
   padding: 8px 16px;
   float: left;
   width: auto;
@@ -406,22 +406,22 @@ a {
   outline: 0;
 }
 
-.w3-bar .w3-button {
+.lz-bar .lz-button {
   white-space: normal;
 }
 
-.w3-container:after,
-.w3-container:before,
-.w3-row-padding:after,
-.w3-row-padding:before,
-.w3-bar:before,
-.w3-bar:after {
+.lz-container:after,
+.lz-container:before,
+.lz-row-padding:after,
+.lz-row-padding:before,
+.lz-bar:before,
+.lz-bar:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.w3-content {
+.lz-content {
   margin-left: auto;
   margin-right: auto;
 }
@@ -431,13 +431,13 @@ a {
 
 @media (max-width: 600px) {
 
-  .w3-hide-small {
+  .lz-hide-small {
     display: none !important;
   }
 }
 
 @media (max-width: 768px) {
-  .w3-image {
+  .lz-image {
     display: none;
   }
 }
@@ -448,33 +448,33 @@ a {
   }
 }
 
-.w3-top {
+.lz-top {
   position: fixed;
   width: 100%;
   z-index: 1;
 }
-.w3-top {
+.lz-top {
   top: 0;
 }
 
-.w3-display-bottomleft {
+.lz-display-bottomleft {
   position: absolute;
   left: 0;
   bottom: 0;
 }
 
-.w3-row-padding {
+.lz-row-padding {
   padding: 0 8px;
 }
 
-.w3-container {
+.lz-container {
   padding: 0.01em 16px;
 }
 
-.w3-card {
+.lz-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-@keyframes w3-spin {
+@keyframes lz-spin {
   0% {
     transform: rotate(0deg);
   }
@@ -550,53 +550,53 @@ a {
   }
 }
 
-.w3-opacity {
+.lz-opacity {
   opacity: 0.6;
 }
-.w3-large {
+.lz-large {
   font-size: 18px !important;
 }
-.w3-center {
+.lz-center {
   text-align: center !important;
 }
-.w3-padding {
+.lz-padding {
   padding: 8px 16px !important;
 }
-.w3-padding-large {
+.lz-padding-large {
   padding: 12px 24px !important;
 }
 
-.w3-padding-16 {
+.lz-padding-16 {
   padding-top: 16px !important;
   padding-bottom: 16px !important;
 }
 
-.w3-padding-32 {
+.lz-padding-32 {
   padding-top: 32px !important;
   padding-bottom: 32px !important;
 }
 
-.w3-padding-64 {
+.lz-padding-64 {
   padding-top: 64px !important;
   padding-bottom: 64px !important;
 }
-.w3-right {
+.lz-right {
   float: right !important;
 }
 
-.w3-button:hover {
+.lz-button:hover {
   color: #000 !important;
   background-color: #ccc !important;
 }
 
 /* Colors */
 
-.w3-white {
+.lz-white {
   color: #000 !important;
   background-color: #fff !important;
 }
 
-.w3-light-grey {
+.lz-light-grey {
   color: #000 !important;
   background-color: #d8e0e2;
 }
