--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ ul {
   color: #2c5777;
 }
 
+.home-link {
+  font-weight: 900;
+  text-align: center;
+}
+
 .recipes {
   padding-left: auto;
   padding-right: auto;
@@ -228,6 +233,8 @@ template {
 
 a {
   background-color: transparent;
+  color: inherit;
+  text-decoration: none;
 }
 
 strong {
@@ -335,10 +342,6 @@ img {
   width: auto;
 }
 
-a {
-  color: inherit;
-}
-
 .lz-button {
   border: none;
   display: inline-block;
@@ -416,12 +419,6 @@ a {
   margin-right: auto;
 }
 
-@media (max-width: 992px) {
-  .search {
-    width: 100%;
-  }
-}
-
 .lz-top {
   position: fixed;
   width: 100%;
@@ -447,81 +444,6 @@ a {
 
 .lz-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-@keyframes lz-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(359deg);
-  }
-}
-@keyframes fading {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes opac {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 0;
-    opacity: 1;
-  }
-}
-@keyframes animateleft {
-  from {
-    left: -300px;
-    opacity: 0;
-  }
-  to {
-    left: 0;
-    opacity: 1;
-  }
-}
-@keyframes animateright {
-  from {
-    right: -300px;
-    opacity: 0;
-  }
-  to {
-    right: 0;
-    opacity: 1;
-  }
-}
-@keyframes animatebottom {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-@keyframes animatezoom {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-  }
 }
 
 .lz-opacity {
@@ -586,7 +508,7 @@ a {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding: 2rem;
+  padding: clamp(0.2rem, 2.5vw, 2rem);
   background-color: white;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease-in-out;
@@ -660,7 +582,7 @@ a {
 
 .sidebar__close {
   transition: all 0.2s linear;
-  margin-left: 1rem;
+  margin-left: auto;
 }
 
 .sidebar__close:hover {
@@ -748,4 +670,51 @@ a {
   border-radius: 2px;
   color: white;
   background-color: rgb(53, 52, 52);
+}
+
+@media (max-width: 295px) {
+  .sidebar__card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .sidebar__delete {
+    margin-left: 0;
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .search__input {
+    padding: 0.8rem;
+    margin: 1rem;
+  }
+
+  .fa-magnifying-glass {
+    display: none !important;
+  }
+}
+
+@media (max-width: 395px) {
+  .lz-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .search {
+    width: 100%;
+  }
+}
+
+/* Detect if device is a touch screen one */
+@media (pointer: none), (pointer: coarse) {
+  .sidebar__delete {
+    opacity: 1;
+  }
 }
