--- a/style.css
+++ b/style.css
@@ -26,6 +26,25 @@ ul {
   margin: 0 0 5px 0;
 }
 
+.loader {
+  position: fixed;
+  display: none;
+  height: 100vh;
+  width: 100vw;
+  font-size: 2rem;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: black;
+  z-index: -1;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: wait !important;
+  z-index: 99;
+}
+
 .grid-container {
   display: grid;
   justify-content: space-evenly;
